--- a/steps/step-4/demo.html
+++ b/steps/step-4/demo.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
-  <title>Step 1 Demo</title>
+  <title>Thelma Sample Component Demo</title>
   <script src="../../../../webcomponentsjs/webcomponents.js"></script>
   <link rel="import" href="th-sample-component.html">
 </head>
