--- a/steps/step-5/demo.html
+++ b/steps/step-5/demo.html
@@ -2,13 +2,13 @@
 <html>
 <head>
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
-  <title>Step 1 Demo</title>
+  <title>Thelma Sample Component Demo</title>
   <script src="../../../../webcomponentsjs/webcomponents.js"></script>
   <link rel="import" href="th-sample-component.html">
 </head>
 <body unresolved>
 
-  <th-sample-component lastName="thelma"></th-sample-component>
+  <th-sample-component lastName="thelma" animateOnInit="true"></th-sample-component>
 
 </body>
 </html>
